crates/agglayer-node/src/rpc/tests/snapshots/agglayer_node__rpc__tests__get_latest_known_certificate_header__get_latest_known_certificate_header::pending.snap
---
source: crates/agglayer-node/src/rpc/tests/get_latest_known_certificate_header.rs
expression: json
---
{
  "id": 0,
  "jsonrpc": "2.0",
  "result": {
    "certificate_id": "0xdd5dc1e27997feb46da34f0bbf412c0f7f501119954c5e1639c948ccc7f0d92f",
    "certificate_index": null,
    "epoch_number": null,
    "height": 2,
    "metadata": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "network_id": 1,
    "new_local_exit_root": "0x0101010101010101010101010101010101010101010101010101010101010101",
    "prev_local_exit_root": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "status": "Pending"
  }
}
